# telemark

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: char_reader.rs  lib.rs  reader.rs
src/lexer/: mdv1.rs  mod.rs  tokens.rs  types.rs
src/parser/: enums.rs  mdv1.rs  mod.rs  types.rs
